--- a/app.kv
+++ b/app.kv
@@ -1,2 +1,7 @@
-# Create your Kivy layout in the kv language here
-BoxLayout:
+FloatLayout:
+    Button:
+        text: "Sort by:"
+        size_hint: None, None
+        size: 160, 60
+        pos: 0, 538
+        background_color: "#808080"
